# pjc_32

./: .gitignore  CMakeLists.txt  build.sh  buildall.sh  clean.sh  generate_debug.sh  new_exercise.sh
00-template/: CMakeLists.txt  main.cpp
01-box-print/: CMakeLists.txt  main.cpp
02-reverse-sentence/: CMakeLists.txt  main.cpp
03-text-formatting/: CMakeLists.txt  main.cpp
04-natural-sort/: CMakeLists.txt  main.cpp  natural_sort.cpp  natural_sort.h
05-text-chunking/: CMakeLists.txt  main.cpp
06-backup-creator/: CMakeLists.txt  main.cpp
